--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,8 @@
 --------------------------------------------------------------*/
 body {
   color: var(--default-color);
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
+  background-color: #FFFAEC;
   /* font-family: var(--default-font); */
   font-family: "Red Hat Display", sans-serif;
 }
@@ -700,8 +701,9 @@ section,
   content: "";
   width: 50px;
   height: 2px;
-  background: var(--accent-color);
+  background: #078A4D;
   display: inline-block;
+  display: none;
 }
 
 .section-title h2:before {
@@ -815,9 +817,11 @@ section,
 .herobtn{
   font-family: "Red Rose", serif;
   font-weight: 600;
-  background-color: #FFC000;
+  /* background-color: #FFC000; */
+  background-color: #92b948;
   box-shadow: 0 15px 30px 0 rgba(219, 164, 61, 0.568);
-  color: #324E2A;
+  /* color: #324E2A; */
+  color: #FFFAEC;
   border:solid 1px #324E2A;
   border-radius: .6rem;
   font-size: 16px;
@@ -874,8 +878,8 @@ section,
 --------------------------------------------------------------*/
 .about {
   /* --background-color: ; */
-  /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 88%, rgba(255,193,7,1) 100%); */
-  background-color: #FFFAEC;
+  background: linear-gradient(0deg, #FFFAEC 95%, rgba(255,193,7,1) 100%);
+  /* background-color: #FFFAEC; */
 }
 
 .about .content h3 {
@@ -892,7 +896,8 @@ section,
 .about .content h2 {
   font-weight: 600;
   font-size: 48px;
-  color: #078A4D;
+  /* color: #078A4D; */
+  color: #843114;
   /* text-transform: uppercase; */
 }
 
@@ -904,6 +909,7 @@ section,
 .about .content p{
   font-size: 18px;
   font-family: "Red Hat Display", sans-serif;
+  color: #843114;
 }
 .about .content .read-more {
   /* background: var(--accent-color); */
@@ -1134,10 +1140,19 @@ section,
 }
 
 /*--------------------------------------------------------------
-# Features Section
+# Features Section | nuevo CURSOS
 --------------------------------------------------------------*/
+.features{
+  /* background-color: #92b948; */
+  /* background-color: #FFFAEC; */
+  /* background-color: #FCCA33;
+  margin: 1rem 2rem;
+  border-radius: 3rem;
+  padding: 1.5rem; */
+}
 .features .features-item {
   color: color-mix(in srgb, var(--default-color), transparent 20%);
+
 }
 
 .features .features-item+.features-item {
@@ -1150,16 +1165,26 @@ section,
   }
 }
 
+.features h2{
+  color: #078A4D;
+  font-size: 50px;
+  font-weight: 600;
+}
+
 .features .features-item h3 {
   font-weight: 700;
   font-size: 26px;
+  color: #078A4D;
 }
 
 .features .features-item .btn-get-started {
-  background-color: var(--accent-color);
+  /* background-color: var(--accent-color); */
+  background-color: #92b948;
+  border:solid 1px #324E2A;
   color: var(--contrast-color);
   padding: 8px 30px 10px 30px;
   border-radius: 4px;
+  font-family: "Red Rose", serif;
 }
 
 .features .features-item .btn-get-started:hover {
@@ -1188,7 +1213,10 @@ section,
 }
 
 .features .features-item img {
-  border: 6px solid var(--contrast-color);
+  /* border: 6px solid var(--contrast-color); */
+  /* border: 6px dotted #92b948; */
+  border: 6px dotted #843114;
+  border-radius: 5rem;
   box-shadow: 0 15px 30px -10px color-mix(in srgb, var(--default-color), transparent 75%);
 }
 
@@ -1488,11 +1516,13 @@ section,
 --------------------------------------------------------------*/
 .faq{
 background-color: #FFFAEC;
+padding-top: 0;
 }
 
 .faq .content h3 {
   font-family: "Titillium Web", sans-serif;
-  color: #078A4D;
+  /* color: #078A4D; */
+  color: #843114;
   font-weight: 600;
   font-size: 50px;
 }
