--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@ a {
 }
 
 a:hover {
-  color: color-mix(in srgb, var(--accent-color), transparent 25%);
+  /* color: color-mix(in srgb, var(--accent-color), transparent 25%); */
   text-decoration: none;
 }
 
@@ -631,7 +631,7 @@ h6 {
 }
 
 .page-title .heading h1 {
-  font-size: 38px;
+  /* font-size: 38px; */
   font-weight: 700;
 }
 
@@ -668,7 +668,7 @@ section,
   /* color: var(--default-color); */
   color: #324E2A;
   background-color: var(--background-color);
-  padding: 120px 0;
+  padding: 50px 0;
   scroll-margin-top: 98px;
   overflow: clip;
 }
@@ -878,8 +878,8 @@ section,
 --------------------------------------------------------------*/
 .about {
   /* --background-color: ; */
-  background: linear-gradient(0deg, #FFFAEC 95%, rgba(255,193,7,1) 100%);
-  /* background-color: #FFFAEC; */
+  /* background: linear-gradient(0deg, #FFFAEC 95%, rgba(255,193,7,1) 100%); */
+  background-color: #FFFAEC;
 }
 
 .about .content h3 {
@@ -991,8 +991,8 @@ section,
 
 .about .icon-box:hover i {
   /* background-color: var(--accent-color); */
-  background-color: #078A4D;
-  color: var(--contrast-color);
+  /* background-color: #078A4D;
+  color: var(--contrast-color); */
 }
 
 .about .icon-boxes .col-md-6:nth-child(2) .icon-box,
@@ -2652,6 +2652,59 @@ padding-top: 0;
 /*--------------------------------------------------------------
 # Service Details Section
 --------------------------------------------------------------*/
+/* .services-details-page{
+  background-color: #FFFAEC;
+} */
+ .heading h5{
+  color: #059652;
+  margin-bottom: 0;
+ }
+ .heading h1{
+  font-size: 50px;
+  margin-bottom: 2rem;
+ }
+ .heading p{
+  margin-bottom: 3rem;
+ }
+ .heading p span{
+  display: block;
+  opacity: 50%;
+  font-weight: 700;
+ }
+.btn-inscripcion{
+ background-color: #ffc107;
+ color: #078A4D;
+ padding: 1.3rem;
+ border-top-right-radius: 40px;
+ border-bottom-left-radius: 40px;
+ font-family: "Red Rose", serif;
+ font-weight: 600;
+ }
+ .btn-inscripcion:hover{
+margin-top: 3rem;
+background-color: #eeb50b;
+color: #078A4D;
+ }
+ .heading img{
+  width: 550px;
+ }
+ @media (max-width: 1199px){
+  img-taller{
+    text-align: center;
+  }
+  .heading img{
+    width: 90%;
+    
+  }
+ }
+ .heading {
+  background-color: #FFFAEC;
+ }
+
+.breadcrumbs li a{
+  color: #21610f73;
+}
+
 .service-details .service-box {
   padding: 20px;
   box-shadow: 0px 2px 20px color-mix(in srgb, var(--default-color), transparent 88%);
@@ -2777,6 +2830,11 @@ padding-top: 0;
   font-size: 20px;
   margin-right: 8px;
   color: var(--accent-color);
+}
+
+.page-title h1{
+  color: #059652;
+
 }
 
 /*--------------------------------------------------------------
