--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--heading-color);
+  /* color: var(--heading-color); */
   /* font-family: var(--heading-font); */
   font-family: "Titillium Web", sans-serif;
 
@@ -584,7 +584,8 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background-color: var(--accent-color);
+  /* background-color: var(--accent-color); */
+  background-color: #eeb50b;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -598,7 +599,7 @@ h6 {
 }
 
 .scroll-top:hover {
-  background-color: color-mix(in srgb, var(--accent-color), transparent 20%);
+  background-color: #eeb50b98;
   color: var(--contrast-color);
 }
 
@@ -761,9 +762,9 @@ section,
   color: #078A4D;
   margin: 0;
   font-family: "Titillium Web", sans-serif;
-  font-weight: 900;
-  font-size: 90px;
-  line-height: 90px;
+  font-weight: 800;
+  font-size: 50px;
+  /* line-height: 90px; */
   text-transform: uppercase;
 }
 
@@ -823,7 +824,7 @@ section,
   /* color: #324E2A; */
   color: #FFFAEC;
   border:solid 1px #324E2A;
-  border-radius: .6rem;
+  
   font-size: 16px;
   padding: .7rem;
   text-align: center;
@@ -1373,11 +1374,16 @@ section,
 # Pricing Section
 --------------------------------------------------------------*/
 .pricing {
-  padding: 60px 0 120px 0;
+  padding: 100px 0 140px 0;
+  background-color: #078A4D;
+  color: #f4f4f4;
+  /* font-family:  "Red Hat Display", sans-serif; */
 }
+
 
 .pricing .section-title {
   margin-bottom: 40px;
+  color: #FFFAEC;
 }
 
 .pricing .pricing-item {
@@ -1386,13 +1392,22 @@ section,
   height: 100%;
   position: relative;
   border-radius: 15px;
+  background-color: #FFFAEC;
+  color: #324E2A;
 }
 
+.pricing-item-a{
+  opacity: 90%;
+}
+.pricing-item-a:hover{
+  opacity: 100%;
+}
 .pricing h3 {
   font-weight: 600;
   margin-bottom: 15px;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
+  color: #078A4D;
 }
 
 .pricing .icon {
@@ -1439,7 +1454,7 @@ section,
 
 .pricing h4 {
   font-size: 48px;
-  color: var(--accent-color);
+  color: #078A4D;
   font-weight: 700;
   font-family: var(--heading-font);
   margin-bottom: 25px;
@@ -1509,7 +1524,7 @@ section,
 
 .pricing .featured {
   z-index: 10;
-  border: 3px solid var(--accent-color);
+  border: 5px solid #ffc107;
 }
 
 @media (min-width: 992px) {
@@ -2687,7 +2702,7 @@ padding-top: 120px;
  }
 .btn-inscripcion{
  background-color: #ffc107;
- color: #078A4D;
+ color:#324E2A;
  padding: 1.3rem;
  border-top-right-radius: 40px;
  border-bottom-left-radius: 40px;
@@ -2708,20 +2723,35 @@ color: #078A4D;
  #sub-detalle{
   color: #078A4D;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 35px;
+}
+
+.valor h4{
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 35px;
+  font-weight: 600;
+}
+
+#tallerportadacel{
+  display: none;
 }
  @media (max-width: 1199px){
-  
-  img-taller{
+  .algo{
     text-align: center;
   }
-  .heading img{
-    width: 90%;
-    
+
+  #tallerportada{
+ margin-top: 3rem;
+ width: 100%;
   }
+  /* .heading img{
+    width: 90%;
+  } */
+
  }
  .heading {
   background-color: #FFFAEC;
+  text-align: center;
  }
 
 .breadcrumbs li a{
@@ -2731,6 +2761,7 @@ color: #078A4D;
 .service-details .service-box {
   padding: 20px;
   box-shadow: 0px 2px 20px color-mix(in srgb, var(--default-color), transparent 88%);
+  color: #843114;
 }
 
 .service-details .service-box+.service-box {
@@ -2743,8 +2774,11 @@ color: #078A4D;
   border-bottom: 2px solid color-mix(in srgb, var(--default-color), transparent 92%);
   padding-bottom: 15px;
   margin-bottom: 15px;
+  color: #078A4D;
 }
-
+#valorprecio{
+  color:#843114 ;
+}
 .service-details .services-list a {
   color: color-mix(in srgb, var(--default-color), transparent 20%);
   background-color: color-mix(in srgb, var(--default-color), transparent 96%);
@@ -2753,6 +2787,7 @@ color: #078A4D;
   padding: 12px 15px;
   margin-top: 15px;
   transition: 0.3s;
+  color: #843114;
 }
 
 .service-details .services-list a:first-child {
@@ -2762,21 +2797,24 @@ color: #078A4D;
 .service-details .services-list a i {
   font-size: 16px;
   margin-right: 8px;
-  color: var(--accent-color);
+  /* color: var(--accent-color); */
+  color: #843114
 }
 
 .service-details .services-list a.active {
   color: var(--contrast-color);
-  background-color: var(--accent-color);
+  /* background-color: var(--accent-color); */
+  color: #324E2A;
 }
 
 .service-details .services-list a.active i {
-  color: var(--contrast-color);
+  /* color: var(--contrast-color); */
+  color: #324E2A;
 }
 
 .service-details .services-list a:hover {
-  background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
-  color: var(--accent-color);
+  /* background-color: color-mix(in srgb, var(--accent-color), transparent 95%);
+  color: var(--accent-color); */
 }
 
 .service-details .download-catalog a {
@@ -2786,6 +2824,7 @@ color: #078A4D;
   padding: 10px 0;
   transition: 0.3s;
   border-top: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
+  color: #843114;
 }
 
 .service-details .download-catalog a:first-child {
@@ -2800,11 +2839,12 @@ color: #078A4D;
 .service-details .download-catalog a i {
   font-size: 24px;
   margin-right: 8px;
-  color: var(--accent-color);
+  /* color: var(--accent-color); */
 }
 
 .service-details .download-catalog a:hover {
-  color: var(--accent-color);
+  /* color: var(--accent-color); */
+  color: #078A4D;
 }
 
 .service-details .help-box {
@@ -3037,4 +3077,8 @@ color: #078A4D;
   padding-left: 5px;
   color: color-mix(in srgb, var(--default-color), transparent 60%);
   font-size: 14px;
+}
+#btn-news{
+  font-family: "Red Hat Display", sans-serif;
+  background-color: #eeb50b;
 }
