--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1918,8 +1918,8 @@ padding-top: 120px;
 # Recent Posts Section
 --------------------------------------------------------------*/
 .recent-posts article {
-  box-shadow: 0 4px 16px color-mix(in srgb, var(--default-color), transparent 90%);
-  padding: 30px;
+  /* box-shadow: 0 4px 16px color-mix(in srgb, var(--default-color), transparent 90%); */
+  /* padding: 30px; */
   height: 100%;
   border-radius: 10px;
   overflow: hidden;
